[project]
name = "dasc7606a-b-a2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch>=2.1.0,<2.3.0",
    "transformers>=4.37.0,<5.0.0",
    "datasets>=2.14.0,<3.0.0",
    "evaluate>=0.4.0,<0.5.0",
    "sacrebleu>=2.3.0,<3.0.0",
    "sentencepiece>=0.1.99,<0.2.0",
    "peft>=0.11.0,<0.13.0",
    "huggingface-hub>=0.19.0,<0.26.0",
    "numpy>=1.24.0,<2.3.0",
    "protobuf>=4.25.0,<6.0.0",
]
